Fix text in font and style dropdown types dark in Dark mode
- in Compact/Classic mode typing text are dark in darkmode

To reproduce:

- change to dark mode and select Compact mode
- type in input field of Font or in Font size
- without this patch color will be dark in dark mode

--- a/browser/css/toolbar.css
+++ b/browser/css/toolbar.css
@@ -516,6 +516,7 @@ button.leaflet-control-search-next
 	background-color: var(--color-background-lighter);
 	border: 1px solid var(--color-border);
 	border-radius: var(--border-radius);
+	color: var(--color-text-dark);
 }
 .select2-container--default .select2-results__option[aria-disabled='true'] {
 	color: var(--color-border-lighter);
